# tk_a_2515

./: .gitignore  README.md  biome.json  mise.toml  package.json  pnpm-lock.yaml
backend/: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/bear/: admin.py  call_openai.py  models.py  serializers.py  urls.py  views.py
backend/bear/migrations/: 0001_initial.py
backend/collectmap/: settings.py  urls.py
backend/commons/: __init__.py  delete_paths.py  export_openapi.py  import_bear_sight.py  import_paths.py  merge_node.py  update_paths.py  utils.py
backend/datas/: yamareco.json
backend/datas/paths/: 九州_grid_14.json  九州_grid_15.json  九州_grid_16.json  九州_grid_17.json  九州_grid_18.json  九州_grid_19.json  九州_grid_21.json  九州_grid_24.json  九州_grid_25.json  九州_grid_26.json  九州_grid_27.json  九州_grid_28.json  九州_grid_29.json  九州_grid_3.json  九州_grid_32.json  九州_grid_34.json  九州_grid_35.json  九州_grid_36.json  九州_grid_37.json  九州_grid_38.json  九州_grid_39.json  九州_grid_4.json  九州_grid_41.json  九州_grid_42.json  九州_grid_43.json  九州_grid_44.json  九州_grid_45.json  九州_grid_46.json  九州_grid_47.json  九州_grid_48.json  九州_grid_49.json  九州_grid_5.json  九州_grid_52.json  九州_grid_53.json  九州_grid_54.json  九州_grid_55.json  九州_grid_56.json  九州_grid_57.json  九州_grid_58.json  九州_grid_59.json  (+458 more)
backend/docs/: openapi.yaml
backend/fastapi/: SCHEMA_TEMPLATE.md  database.py  main.py  utils.py
backend/fastapi/crud/: __init__.py  mountain.py  path.py
backend/fastapi/models/: __init__.py  elevation.py  mountain.py  path.py
backend/fastapi/notebook/: test.ipynb
backend/fastapi/routers/: mountains.py  paths.py
backend/fastapi/schemas/: __init__.py  mountain.py  path.py
backend/fastapi/scripts/: crawl_path.py  create_tables.py  (+5 more)
backend/mountains/: models.py  serializers.py  views.py
backend/paths/: merge.py  models.py  serializers.py  urls.py  utils.py  views.py
(+185 files in other folders)
