[project]
name = "backend"
version = "0.1.0"
description = "Django backend for Collect Map API"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0.0",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.3.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
    "pillow>=11.3.0",
    "numpy>=2.3.3",
    "requests>=2.32.3",
    "inflection>=0.5.1",
    "uritemplate>=4.1.1",
    "drf-spectacular>=0.28.0",
    "scikit-learn>=1.7.2",
    "networkx>=3.5",
    "tqdm>=4.67.1",
    "openai>=2.7.1",
    "httpx>=0.28.1",
    "dotenv>=0.9.9",
    "geopy>=2.4.1",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
]

[tool.ruff]
line-length = 128

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
